# SessionPulse-Telegram

./: .env.example  .gitignore  README.md  docker-compose.yml
dashboard/: Dockerfile  README.md  package.json  svelte.config.js  vite.config.ts
dashboard/src/: app.css  app.html
dashboard/src/lib/api/: client.ts
dashboard/src/lib/components/: AccountCard.svelte  AlertBanner.svelte  ConnectionStatus.svelte  PipelineFlow.svelte  StateIndicator.svelte  Timeline.svelte
dashboard/src/lib/stores/: accounts.ts  alerts.ts  websocket.ts
dashboard/src/lib/utils/: colors.ts  formatters.ts
dashboard/src/routes/: +layout.svelte  +page.svelte
dashboard/src/routes/accounts/: +page.svelte
dashboard/src/routes/alerts/: +page.svelte
dashboard/src/routes/pipeline/: +page.svelte
examples/: aiogram_integration.py  basic_usage.py  quart_integration.py
sdk/: README.md  pyproject.toml
sdk/session_pulse/: __init__.py  client.py
sdk/session_pulse/core/: __init__.py  buffer.py  circuit_breaker.py  context.py  event.py  states.py
sdk/session_pulse/integrations/: aiogram.py  quart.py
sdk/session_pulse/transport/: __init__.py  base.py  http.py  kafka.py  noop.py
server/: Dockerfile  LICENSE  README.md  pyproject.toml
server/config/: alert_rules.yaml
server/server/: config.py  main.py
server/server/alerts/: engine.py
server/server/api/v1/: router.py
server/server/api/websocket/: manager.py
server/server/consumer/: batch_processor.py  kafka_consumer.py
server/server/metrics/: windows.py
server/server/models/: events.py
server/server/state/: machine.py  timeout_monitor.py
server/server/storage/: clickhouse.py
(+2 files in other folders)
