[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "session-pulse"
version = "0.1.0"
description = "Domain-aware observability for session-based distributed systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "SessionPulse Contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]

[project.optional-dependencies]
kafka = ["aiokafka>=0.9.0"]
http = ["aiohttp>=3.9.0"]
telethon = ["telethon>=1.30.0"]
aiogram = ["aiogram>=3.0.0"]
quart = ["quart>=0.19.0"]
all = ["aiokafka>=0.9.0", "aiohttp>=3.9.0"]

[tool.hatch.build.targets.wheel]
packages = ["session_pulse"]
