[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "session-pulse-server"
version = "0.1.0"
description = "SessionPulse aggregator server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "aiokafka>=0.9.0",
    "clickhouse-connect>=0.7.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "websockets>=16.0",
]
[tool.hatch.build.targets.wheel]
packages = ["server", "config"]
